<resources>
    <string name="app_name">Masterpiece</string>
    <string name="create_game">Create New Game</string>
    <string name="join_game">Join Game</string>
    <string name="game_number">Game Number</string>
    <string name="hint_choose_user_name">Game Username</string>
    <string name="waiting_for_player">Waiting for Player...</string>
    <string name="action_settings">Settings</string>
    <string name="player_cash">Cash: </string>
    <string name="start_game">Start Game</string>
    <string name="player_title">PlayerID</string>
    <string name="cash">Cash: </string>
    <string name="winning_bid_amount">Winning Bid Amount: </string>
    <string name="increase_bid_by_50000">Bid + $50,000</string>
    <string name="Do_not_bid">Don\'t Bid </string>
    <string name="current_highest_bid">Current Highest bid:  </string>
    <string name="painting_name">Painting Title </string>
    <string name="secret_value">Paintings Secret Value </string>
    <string name="game_instruction">Game Instructions </string>

</resources>
