<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/creategame_view"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/game_number"
        android:textColor="@color/colorHeading"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textviewGameNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorMainText"
        android:text="1234"
        android:gravity="center"/>
    <EditText
        android:id="@+id/edittext_userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:gravity="center"
        android:maxLength="3"
        android:textColor="@color/colorMainText"
        android:hint="@string/hint_choose_user_name"/>

    <Button
        android:id="@+id/buttonJoinGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/join_game"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/rounded_rect_blue"
        android:textSize="25sp"
        android:layout_gravity="center_vertical"/>
</LinearLayout>