<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/privateauction_bidwon_view"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Private Auction"
        android:id="@+id/textView11"
        android:textColor="@color/colorHeading"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="has Won the Auction!"
        android:id="@+id/textView12"
        android:textColor="@color/colorMainText"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cash"
        android:textColor="@color/colorMainText"
        android:id="@+id/txtPlayerCash"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/winning_bid_amount"
        android:id="@+id/txtHighestBid"
        android:textColor="@color/colorMainText"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Painting to My Collection"
        android:id="@+id/btnAddPaintingToCollection"
        android:background="@drawable/custom_button"
        android:textColor="@color/colorButtonText"
        android:layout_marginBottom="110dp"
        android:layout_above="@+id/txtPlayerCash"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_title"
        android:id="@+id/textViewWinnerName"
        android:textColor="@color/colorMainText"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/textView11"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Round"
        android:id="@+id/btn_end_round"
        android:textColor="@color/colorButtonText"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/txtPlayerCash"
        android:layout_alignRight="@+id/btnAddPaintingToCollection"
        android:layout_alignEnd="@+id/btnAddPaintingToCollection" />

</RelativeLayout>